<resources>
    <string name="app_name">Jarvis</string>
    <string name="swipe_message">Swipe your finger</string>
    <string name="pin_message">Enter the PIN</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vimal P Viswan</string>
    <string name="nav_header_company">VPV Tech Solutions</string>
    <string name="nav_header_email">vimal974ever@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="secretNotes">Secret Notes</string>
    <string name="clearExpenseText">Clear Expense for the month</string>

    <string name="menu_home">Home</string>
    <string name="menu_expenses">My Expenses</string>
    <string name="menu_debits">Debits owed</string>
    <string name="menu_credits">Credits owed</string>
    <string name="menu_analysis">Analysis Report</string>

    <string name="menu_daily_reminders">Add daily reminders</string>
    <string name="menu_normal_reminders">Add normal reminders</string>
    <string name="menu_view_reminders">All reminders</string>

    <string-array name="expense_types">
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Medical</item>
        <item>Installments</item>
        <item>Stationaries</item>
        <item>Others</item>
    </string-array>

    <string-array name="reminder_types">
        <item>Normal</item>
        <item>Recurring/Daily</item>
    </string-array>
</resources>
