<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jarvis.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.jarvis.ui.home.HomeFragment"
        android:label="Home Second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_expense"
        android:name="com.example.jarvis.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.jarvis.ui.credits.CreditFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />

    <fragment
        android:id="@+id/nav_debits"
        android:name="com.example.jarvis.ui.debits.DebitFragment"
        android:label="@string/menu_debits"
        tools:layout="@layout/fragment_debits"/>

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.example.jarvis.ui.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/fragment_analysis"/>

    <fragment
        android:id="@+id/nav_daily_reminders"
        android:name="com.example.jarvis.ui.daily_reminders.DailyRemindersFragment"
        android:label="@string/menu_daily_reminders"
        tools:layout="@layout/fragment_daily_reminder"/>

    <fragment
        android:id="@+id/nav_normal_reminders"
        android:name="com.example.jarvis.ui.normal_reminders.NormalRemindersFragment"
        android:label="@string/menu_normal_reminders"
        tools:layout="@layout/fragment_normal_reminders"/>

    <fragment
        android:id="@+id/nav_view_reminders"
        android:name="com.example.jarvis.ui.vew_reminders.ViewRemindersFragment"
        android:label="@string/menu_view_reminders"
        tools:layout="@layout/fragment_view_reminders"/>
</navigation>