<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myProfile"
        android:orderInCategory="100"
        android:title="My Profile"
        android:onClick="showProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="107"
        android:title="@string/action_settings"
        android:onClick="settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/clearExpense"
        android:orderInCategory="101"
        android:title="@string/clearExpenseText"
        android:onClick="clearExpense"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="108"
        android:title="@string/logout"
        android:onClick="logout"
        app:showAsAction="never" />
</menu>
